--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </p>
 
                     <p>_xb_info_</p>
-            <img src="file:///C:/Users/el%20mouhit/Desktop/aymen/mel.png" alt="mel" style="height:300px;margin-top:60px;">
+            <img src="mel.png" alt="mel" style="height:300px;margin-top:60px;">
           
         </section>
         <div>
