--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <section id="informmation" style="height:90vh;">
         <h1 style=" text-shadow:2px 2px 3px red ;">informmation</h1>
         
-            <p style="color:#fff ;padding:1px;width:500px;height:200px;padding-top: 10px;border: solid 6px rgb(232, 232, 232);text-align: center;border-radius: 0px 30px 0px 30px;margin-top: 20px ;margin-left:20px;margin-top:20px ;">
+            <p style="color:#fff ;width:500px;height:200px;padding: 10px;border: solid 6px rgb(232, 232, 232);text-align: center;border-radius: 0px 30px 0px 30px;margin-top: 20px ;margin-left:20px;margin-top:20px ;">
                 iam a etudiant algerian i have a channel in instagrami make the post 
                 and de chat video about how to get maney , i used language arabic 
                 becouse its this longuage to my contry,
